# gbpstack

./: CMakeLists.txt  LICENSE  README.md
config/: config.json  config_circle.json
inc/gbp/: Factor.h  Factorgraph.h  KDTreeVectorOfVectorsAdaptor.h  Robot.h  Simulator.h  Variable.h  globals.h  key.h  utils.h
output/: result.json
src/: Factor.cpp  Factorgraph.cpp  Robot.cpp  Simulator.cpp  Variable.cpp  globals.cpp  main.cpp  utils.cpp
